Generalize product migration importer
